WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156502
[iOS] do not exit AirPlay when the screen locks
https://bugs.webkit.org/show_bug.cgi?id=156502
Summary
[iOS] do not exit AirPlay when the screen locks
Eric Carlson
Reported
2016-04-12 07:50:02 PDT
Allow AirPlay to continue playing behind lock screen.
Attachments
Proposed patch
(4.60 KB, patch)
2016-04-12 08:18 PDT
,
Eric Carlson
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews122 for ios-simulator-wk2
(611.16 KB, application/zip)
2016-04-12 09:19 PDT
,
Build Bot
no flags
Details
Updated Patch.
(4.73 KB, patch)
2016-04-12 11:53 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Updated Patch.
(3.95 KB, patch)
2016-04-12 12:46 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Revised patch.
(8.06 KB, patch)
2016-04-29 17:14 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2016-04-12 08:18:21 PDT
Created
attachment 276235
[details]
Proposed patch
Eric Carlson
Comment 2
2016-04-12 08:18:51 PDT
<
rdar://problem/24616592
>
Build Bot
Comment 3
2016-04-12 09:19:28 PDT
Comment on
attachment 276235
[details]
Proposed patch
Attachment 276235
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/1142388
New failing tests: animations/trigger-container-scroll-empty.html
Build Bot
Comment 4
2016-04-12 09:19:30 PDT
Created
attachment 276238
[details]
Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.10.5
Eric Carlson
Comment 5
2016-04-12 11:53:45 PDT
Created
attachment 276256
[details]
Updated Patch.
Eric Carlson
Comment 6
2016-04-12 12:46:01 PDT
Created
attachment 276263
[details]
Updated Patch.
WebKit Commit Bot
Comment 7
2016-04-12 13:40:35 PDT
Comment on
attachment 276263
[details]
Updated Patch. Clearing flags on attachment: 276263 Committed
r199383
: <
http://trac.webkit.org/changeset/199383
>
WebKit Commit Bot
Comment 8
2016-04-12 13:40:38 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 9
2016-04-27 12:00:54 PDT
Reverted
r199383
for reason: Seems to have caused a 0.5% PLT regression on iOS Committed
r200141
: <
http://trac.webkit.org/changeset/200141
>
Eric Carlson
Comment 10
2016-04-29 17:14:22 PDT
Created
attachment 277763
[details]
Revised patch.
Dean Jackson
Comment 11
2016-04-29 17:35:52 PDT
Comment on
attachment 277763
[details]
Revised patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=277763&action=review
> Source/WebCore/html/MediaElementSession.cpp:364 > +#if !PLATFORM(IOS) > if (!m_playbackTarget || !m_playbackTarget->hasActiveRoute()) > return false; > +#endif
I don't understand this change.
Eric Carlson
Comment 12
2016-04-29 17:37:35 PDT
(In reply to
comment #11
)
> Comment on
attachment 277763
[details]
> Revised patch. > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=277763&action=review
> > > Source/WebCore/html/MediaElementSession.cpp:364 > > +#if !PLATFORM(IOS) > > if (!m_playbackTarget || !m_playbackTarget->hasActiveRoute()) > > return false; > > +#endif > > I don't understand this change.
m_playbackTarget isn't relevant on iOS.
WebKit Commit Bot
Comment 13
2016-04-29 17:38:56 PDT
Comment on
attachment 277763
[details]
Revised patch. Rejecting
attachment 277763
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 277763, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: a/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 73, in run_and_handle_errors self._run(tool, options, state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 67, in _run step(tool, options).run(state) File "/Volumes/Data/EWS/WebKit/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 54, in run if changelog_entry.has_valid_reviewer(): AttributeError: 'NoneType' object has no attribute 'has_valid_reviewer' Full output:
http://webkit-queues.webkit.org/results/1242119
Eric Carlson
Comment 14
2016-04-29 18:08:17 PDT
Committed
r200273
:
https://trac.webkit.org/r200273
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug